--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -1,4 +1,23 @@
-<select class="form-control" id="">
-    <option value="" disabled selected>-- Seleccionar --</option>
-    <option *ngFor="let p of pokemon" [value]="p.name">{{p.name}}</option>
-</select>
+<div class="card">
+    <div class="card-body">
+        <div class="row">
+            <label class="col-lg-2 col-md-6 col-sm-12" for="">Pokemones</label>
+            <div class="col-lg-6 col-md-6 col-sm-12">
+                <select class="form-control" [(ngModel)]="seleccionado" (change)="buscarHabilidades()">
+                    <option value="" disabled selected>-- Seleccionar --</option>
+                    <option *ngFor="let p of pokemon; let i = index;" value="{{(i+1)}}">{{(i+1)}} - {{p.name}}</option>
+                </select>
+            </div>
+        </div>
+    </div>
+</div>
+<hr>
+<div class="card">
+    <div class="card-body">
+        <h3 class="text-center fs-3">{{name}}</h3>
+        <div class="text-center">
+            <img [src]="imagen" alt="{{name}}" width="100" height="100">
+            <p>Base Experiencia - {{base}}</p>
+        </div>
+    </div>
+</div>
