--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -12,12 +12,14 @@
     </div>
 </div>
 <hr>
-<div class="card">
-    <div class="card-body">
-        <h3 class="text-center fs-3">{{name}}</h3>
-        <div class="text-center">
-            <img [src]="imagen" alt="{{name}}" width="100" height="100">
-            <p>Base Experiencia - {{base}}</p>
+<div [class.oculto]="ocultar">
+    <div class="card">
+        <div class="card-body">
+            <h3 class="text-center fs-3">{{name}}</h3>
+            <div class="text-center">
+                <img [src]="imagen" alt="{{name}}" width="100" height="100">
+                <p>Base Experiencia - {{base}}</p>
+            </div>
         </div>
     </div>
 </div>
